Upgrade to LimeWire 5.2.6