@@ -45,6 +45,7 @@ import org.limewire.core.api.support.LocalClientInfoFactory;
 import org.limewire.inspection.Inspectable;
 import org.limewire.inspection.InspectionPoint;
 import org.limewire.io.IOUtils;
+import org.limewire.ui.swing.action.UrlAction;
 import org.limewire.ui.swing.components.HyperlinkButton;
 import org.limewire.ui.swing.components.LimeJDialog;
 import org.limewire.ui.swing.components.MultiLineLabel;
@@ -79,11 +80,11 @@ public final class BugManager {
     private static BugManager INSTANCE;
     
     /**
-     * the width of the internal error dialog box
+     * The width of the internal error dialog box.
      */
     private final int DIALOG_BOX_WIDTH = 300;
     /**
-     * the height of the internal error dialog box
+     * The height of the internal error dialog box.
      */
     private final int DIALOG_BOX_HEIGHT = 100;
     
@@ -98,56 +99,56 @@ public final class BugManager {
                         return t;
                     }
                 });
-	
-	/**
-	 * A mapping of stack traces (String) to next allowed time (long)
-	 * that the bug can be reported.
-	 *
-	 * Used only if reporting the bug to the servlet.
-	 */
-	private final Map<String, Long> BUG_TIMES = Collections.synchronizedMap(new HashMap<String, Long>());
-	
-	/**
-	 * A lock to be used when writing to the logfile, if the log is to be
-	 * recorded locally.
-	 */
-	private final Object WRITE_LOCK = new Object();
-	
-	/**
-	 * A separator between bug reports.
-	 */
-	// saved to local file system only, so use platform encoding
-	private final byte[] SEPARATOR = "-----------------\n".getBytes();
-	
-	/**
-	 * The next time we're allowed to send any bug.
-	 *
-	 * Used only if reporting the bug to the servlet.
-	 */
-	private volatile long _nextAllowedTime = 0;
-	
-	/**
-	 * The number of bug dialogs currently showing.
-	 */
-	private volatile int _dialogsShowing = 0;
-	
-	/**
-	 * The maximum number of dialogs we're allowed to show.
-	 */
-	private final int MAX_DIALOGS = 3;
-	
-	/**
-	 * Whether or not we have dirty data after the last save.
-	 */
-	private boolean dirty = false;
-	
-	public static synchronized BugManager instance() {
-	    if(INSTANCE == null)
-	        INSTANCE = new BugManager();
-	    return INSTANCE;
-	}
     
-    /** Inspectable to allow pulling of bug reports */
+    /**
+     * A mapping of stack traces (String) to next allowed time (long)
+     * that the bug can be reported.
+     *
+     * Used only if reporting the bug to the servlet.
+     */
+    private final Map<String, Long> BUG_TIMES = Collections.synchronizedMap(new HashMap<String, Long>());
+    
+    /**
+     * A lock to be used when writing to the logfile, if the log is to be
+     * recorded locally.
+     */
+    private final Object WRITE_LOCK = new Object();
+    
+    /**
+     * A separator between bug reports.
+     */
+    // saved to local file system only, so use platform encoding
+    private final byte[] SEPARATOR = "-----------------\n".getBytes();
+    
+    /**
+     * The next time we're allowed to send any bug.
+     *
+     * Used only if reporting the bug to the servlet.
+     */
+    private volatile long _nextAllowedTime = 0;
+    
+    /**
+     * The number of bug dialogs currently showing.
+     */
+    private volatile int _dialogsShowing = 0;
+    
+    /**
+     * The maximum number of dialogs we're allowed to show.
+     */
+    private final int MAX_DIALOGS = 3;
+    
+    /**
+     * Whether or not we have dirty data after the last save.
+     */
+    private boolean dirty = false;
+    
+    public static synchronized BugManager instance() {
+        if(INSTANCE == null)
+            INSTANCE = new BugManager();
+        return INSTANCE;
+    }
+    
+    /** Inspectable to allow pulling of bug reports. */
     @SuppressWarnings("unused")
     @InspectionPoint("bug report")
     private static final Inspectable INSPECTABLE = new Inspectable() {
@@ -178,26 +179,26 @@ public final class BugManager {
     public void shutdown() {
         writeBugsToDisk();
     }
-	
-	/**
-	 * Handles a single bug report.
-	 * If bug is a ThreadDeath, rethrows it.
-	 * If the user wants to ignore all bugs, this effectively does nothing.
-	 * The the server told us to stop reporting this (or any) bug(s) for
-	 * awhile, this effectively does nothing.
-	 * Otherwise, it will either send the bug directly to the servlet
-	 * or ask the user to review it before sending.
-	 */
-	public void handleBug(Throwable bug, String threadName, String detail) {
+    
+    /**
+     * Handles a single bug report.
+     * If bug is a ThreadDeath, rethrows it.
+     * If the user wants to ignore all bugs, this effectively does nothing.
+     * The the server told us to stop reporting this (or any) bug(s) for
+     * awhile, this effectively does nothing.
+     * Otherwise, it will either send the bug directly to the servlet
+     * or ask the user to review it before sending.
+     */
+    public void handleBug(Throwable bug, String threadName, String detail) {
         if( bug instanceof ThreadDeath ) // must rethrow.
-	        throw (ThreadDeath)bug;
-	        
+            throw (ThreadDeath)bug;
+        
         // Try to dispatch the bug to a friendly handler.
         if (bug instanceof IOException
                 && IOUtils.handleException((IOException) bug, IOUtils.ErrorType.GENERIC)) {
             return; // handled already.
         }   
-	    
+        
         bug.printStackTrace();
         
         // Build the LocalClientInfo out of the info ...
@@ -210,10 +211,10 @@ public final class BugManager {
         boolean sent = false;
         // never ignore bugs or auto-send when developing.
         if(!LimeWireUtils.isTestingVersion()) {
-    	    if(!BugSettings.REPORT_BUGS.getValue() ) {
-    	        return; // ignore.
-    	    }
-    	        
+            if(!BugSettings.REPORT_BUGS.getValue() ) {
+                return; // ignore.
+            }
+            
             // If we have already sent information about this bug, leave.
             if( !shouldInform(info) ) {
                return; // ignore.
@@ -222,13 +223,13 @@ public final class BugManager {
             // If the user wants to automatically send to the servlet, do so.
             // Otherwise, display it for review.
             if( isSendableVersion()) {
-            	if (LimeWireUtils.isAlphaRelease() || !BugSettings.SHOW_BUGS.getValue()) {
-            		sent = true;
-            	}
+                if (LimeWireUtils.isAlphaRelease() || !BugSettings.SHOW_BUGS.getValue()) {
+                    sent = true;
+                }
             }
             
             if (sent) { 
-            	sendToServlet(info);
+                sendToServlet(info);
             }
         }
         
@@ -378,9 +379,12 @@ public final class BugManager {
         _dialogsShowing++;
         
         String title = notImplemented ? I18n.tr("Oops!") : I18n.tr("A problem occurred...");
-		final JDialog DIALOG = new LimeJDialog(GuiUtils.getMainFrame(), title, ModalityType.APPLICATION_MODAL);
-		final Dimension DIALOG_DIMENSION = new Dimension(DIALOG_BOX_WIDTH, DIALOG_BOX_HEIGHT);
-		DIALOG.setSize(DIALOG_DIMENSION);
+        final JDialog DIALOG = new LimeJDialog(GuiUtils.getMainFrame(), title, ModalityType.APPLICATION_MODAL);
+        final Dimension DIALOG_DIMENSION = new Dimension(DIALOG_BOX_WIDTH, DIALOG_BOX_HEIGHT);
+        DIALOG.setSize(DIALOG_DIMENSION);
+        DIALOG.setResizable(false);
+        DIALOG.setDefaultCloseOperation(JDialog.DISPOSE_ON_CLOSE);
+
 
         // make sure number of current dialogs gets decremented when user closes it 
         DIALOG.addWindowListener(new WindowAdapter() {
@@ -389,13 +393,12 @@ public final class BugManager {
                 _dialogsShowing--;
             }
         });
-		
 
         JPanel mainPanel = new JPanel();
         mainPanel.setBorder(BorderFactory.createEmptyBorder(10,10,10,10));
         mainPanel.setLayout(new GridBagLayout());
 
-		boolean sendable = isSendableVersion();
+        boolean sendable = isSendableVersion();
 
         String msg;
         if(notImplemented) {
@@ -490,30 +493,39 @@ public final class BugManager {
             }
         });
 
-
+        HyperlinkButton helpLink =
+            new HyperlinkButton(I18n.tr("Ask for help on the forums"));
+        String url;
+        if(LimeWireUtils.isAlphaRelease() || LimeWireUtils.isBetaRelease())
+            url = "http://www.limewire.com/client_redirect/?page=betaTesting";
+        else
+            url = "http://www.limewire.com/client_redirect/?page=usingLimeWire5";
+        helpLink.addActionListener(new UrlAction(url));
+        
         // the "always use this answer" checkbox
         final JCheckBox alwaysuseThisAnswer = new JCheckBox(I18n.tr("Send bugs without asking me in the future"));
         alwaysuseThisAnswer.setSelected(false);
 
         JButton sendButton = new JButton(I18n.tr("Send Bug"));
         sendButton.addActionListener(new ActionListener() {
-			public void actionPerformed(ActionEvent e) {
+            public void actionPerformed(ActionEvent e) {
                 // if "always use this answer" is checked, then set SHOW_BUGS to false
                 if (alwaysuseThisAnswer.isSelected()) {
                     BugSettings.SHOW_BUGS.setValue(false);
                 }
                 String userComments = userCommentsTextArea.getText();
-			    if(!userComments.equals(defaultDesc))
-			        info.addUserComments(userComments);
-			    sendToServlet(info);
-				DIALOG.dispose();
-				_dialogsShowing--;
-			}
-		});
+                if(!userComments.equals(defaultDesc))
+                    info.addUserComments(userComments);
+                sendToServlet(info);
+                DIALOG.dispose();
+                _dialogsShowing--;
+            }
+        });
 
         constraints = new GridBagConstraints();
         constraints.gridx = 0;
         constraints.gridy = 0;
+        constraints.gridwidth = 2;
         mainPanel.add(labelPanel, constraints);
 
         constraints = new GridBagConstraints();
@@ -522,10 +534,18 @@ public final class BugManager {
         constraints.insets = new Insets(10, 0, 0, 0);
         constraints.anchor = GridBagConstraints.LINE_START;
         mainPanel.add(showHideBugLink, constraints);
+        
+        constraints = new GridBagConstraints();
+        constraints.gridx = 1;
+        constraints.gridy = 1;
+        constraints.insets = new Insets(10, 0, 0, 0);
+        constraints.anchor = GridBagConstraints.LINE_END;
+        mainPanel.add(helpLink, constraints);
 
         constraints = new GridBagConstraints();
         constraints.gridx = 0;
         constraints.gridy = 2;
+        constraints.gridwidth = 2;
         constraints.fill = GridBagConstraints.BOTH;
         constraints.weightx = 1.0;
         constraints.weighty = 1.0;
@@ -536,6 +556,7 @@ public final class BugManager {
             constraints = new GridBagConstraints();
             constraints.gridx = 0;
             constraints.gridy = 3;
+            constraints.gridwidth = 2;
             constraints.anchor = GridBagConstraints.LINE_START;
             constraints.insets = new Insets(10, 0, 0, 0);
             mainPanel.add(alwaysuseThisAnswer, constraints);
@@ -543,17 +564,18 @@ public final class BugManager {
             constraints = new GridBagConstraints();
             constraints.gridx = 0;
             constraints.gridy = 4;
+            constraints.gridwidth = 2;
             mainPanel.add(sendButton, constraints);
         }
         
         mainPanel.validate();
         DIALOG.getContentPane().add(mainPanel);
-		DIALOG.pack();
-		sendButton.requestFocusInWindow();
-		DIALOG.setLocationRelativeTo(GuiUtils.getMainFrame());
+        DIALOG.pack();
+        sendButton.requestFocusInWindow();
+        DIALOG.setLocationRelativeTo(GuiUtils.getMainFrame());
 
-		try {
-		    DIALOG.setVisible(true);
+        try {
+            DIALOG.setVisible(true);
         } catch(InternalError ie) {
             //happens occasionally, ignore.
         } catch(ArrayIndexOutOfBoundsException npe) {
@@ -569,34 +591,34 @@ public final class BugManager {
     private void servletSendFailed(final LocalClientInfo info) {
         _dialogsShowing++;
 
-		final JDialog DIALOG = new LimeJDialog(GuiUtils.getMainFrame(), I18n.tr("Internal Error"), ModalityType.APPLICATION_MODAL);
-		final Dimension DIALOG_DIMENSION = new Dimension(350, 300);
-		final Dimension ERROR_DIMENSION = new Dimension(300, 200);
-		DIALOG.setSize(DIALOG_DIMENSION);
+        final JDialog DIALOG = new LimeJDialog(GuiUtils.getMainFrame(), I18n.tr("Internal Error"), ModalityType.APPLICATION_MODAL);
+        final Dimension DIALOG_DIMENSION = new Dimension(350, 300);
+        final Dimension ERROR_DIMENSION = new Dimension(300, 200);
+        DIALOG.setSize(DIALOG_DIMENSION);
 
         JPanel mainPanel = new JPanel();
         mainPanel.setBorder(BorderFactory.createEmptyBorder(10,10,10,10));
-		mainPanel.setLayout(new BoxLayout(mainPanel, BoxLayout.Y_AXIS));
+        mainPanel.setLayout(new BoxLayout(mainPanel, BoxLayout.Y_AXIS));
 
         MultiLineLabel label = new MultiLineLabel(I18n.tr("LimeWire was unable to connect to the bug server in order to send the below bug report. For further help and to aid with debugging, please visit www.limewire.com and click \'Support\'. Thank you."), 400);
-		JPanel labelPanel = new JPanel();
-		JPanel innerPanel = new JPanel();
-		labelPanel.setLayout(new BoxLayout(labelPanel, BoxLayout.X_AXIS));
-		innerPanel.setLayout(new BoxLayout(innerPanel, BoxLayout.Y_AXIS));
-		innerPanel.add(label);
-		innerPanel.add(Box.createVerticalStrut(6));
-		labelPanel.add(innerPanel);
-		labelPanel.add(Box.createHorizontalGlue());
-		
-		// Add 'FILES IN CURRENT DIRECTORY [text]
-		//      SIZE: 0'
-		// So that the script processing the emails still
-		// works correctly.  [It uses the info as markers
-		// of when to stop reading -- if it wasn't present
-		// it failed processing the email correctly.]
-		String bugInfo = info.toBugReport().trim() + "\n\n" + 
-		                 "FILES IN CURRENT DIRECTORY NOT LISTED.\n" +
-		                 "SIZE: 0";
+        JPanel labelPanel = new JPanel();
+        JPanel innerPanel = new JPanel();
+        labelPanel.setLayout(new BoxLayout(labelPanel, BoxLayout.X_AXIS));
+        innerPanel.setLayout(new BoxLayout(innerPanel, BoxLayout.Y_AXIS));
+        innerPanel.add(label);
+        innerPanel.add(Box.createVerticalStrut(6));
+        labelPanel.add(innerPanel);
+        labelPanel.add(Box.createHorizontalGlue());
+        
+        // Add 'FILES IN CURRENT DIRECTORY [text]
+        //      SIZE: 0'
+        // So that the script processing the emails still
+        // works correctly.  [It uses the info as markers
+        // of when to stop reading -- if it wasn't present
+        // it failed processing the email correctly.]
+        String bugInfo = info.toBugReport().trim() + "\n\n" + 
+            "FILES IN CURRENT DIRECTORY NOT LISTED.\n" +
+            "SIZE: 0";
         final JTextArea textArea = new JTextArea(bugInfo);
         textArea.selectAll();
         textArea.copy();        
@@ -609,19 +631,19 @@ public final class BugManager {
         JPanel buttonPanel = new JPanel();
         JButton copyButton = new JButton(I18n.tr("Copy Report"));
         copyButton.addActionListener(new ActionListener() {
-			public void actionPerformed(ActionEvent e) {
-			    textArea.selectAll();
-				textArea.copy();
-				textArea.setCaretPosition(0);
-			}
-		});
+            public void actionPerformed(ActionEvent e) {
+                textArea.selectAll();
+                textArea.copy();
+                textArea.setCaretPosition(0);
+            }
+        });
         JButton quitButton = new JButton(I18n.tr("OK"));
         quitButton.addActionListener(new ActionListener() {
-			public void actionPerformed(ActionEvent e){
-				DIALOG.dispose();
-				_dialogsShowing--;
-			}
-		});
+            public void actionPerformed(ActionEvent e){
+                DIALOG.dispose();
+                _dialogsShowing--;
+            }
+        });
         buttonPanel.add(copyButton);
         buttonPanel.add(quitButton);
 
@@ -631,14 +653,14 @@ public final class BugManager {
 
         DIALOG.getContentPane().add(mainPanel);
         try {
-		    DIALOG.pack();
+            DIALOG.pack();
         } catch(OutOfMemoryError oome) {
             // we couldn't put this dialog together, discard it entirely.
             return;
         }
 
         DIALOG.setLocationRelativeTo(GuiUtils.getMainFrame());
-		DIALOG.setVisible(true);
+        DIALOG.setVisible(true);
     }    
     
     /**
@@ -689,7 +711,7 @@ public final class BugManager {
                 }
                 
                 if( thisNextTime != 0 ) {
-                    BUG_TIMES.put(INFO.getParsedBug(), new Long(now + thisNextTime));
+                    BUG_TIMES.put(INFO.getParsedBug(), Long.valueOf(now + thisNextTime));
                     dirty = true;
                 }
                 
